--- a/poc/weapon/tutorial/2-train/train.ipynb
+++ b/poc/weapon/tutorial/2-train/train.ipynb
@@ -129,7 +129,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test \n"
+   ]
   }
  ],
  "metadata": {
@@ -148,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
