--- a/poc/weapon/tutorial/1-gun/test_waepon.ipynb
+++ b/poc/weapon/tutorial/1-gun/test_waepon.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -26,8 +26,8 @@
     }
    ],
    "source": [
-    "# gun_cascade = cv2.CascadeClassifier('cascade.xml')\n",
-    "gun_cascade = cv2.CascadeClassifier('cascade-2.xml')\n",
+    "gun_cascade = cv2.CascadeClassifier('cascade.xml')\n",
+    "# gun_cascade = cv2.CascadeClassifier('cascade-2.xml')\n",
     "camera = cv2.VideoCapture('data/gun4_2.mp4')\n",
     "\n",
     "# initialize the first frame in the video stream\n",
@@ -49,15 +49,16 @@
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    gray = cv2.GaussianBlur(gray, (21, 21), 0)\n",
     "    \n",
-    "    gun = gun_cascade.detectMultiScale(gray, 1.3, 5, minSize = (100, 100))\n",
+    "    gun = gun_cascade.detectMultiScale(gray, scaleFactor=1.3,minNeighbors=10, minSize = (100, 100))\n",
+    "#     gun = gun_cascade.detectMultiScale(gray, 1.3,minNeighbors=5, minSize = (100, 100))\n",
     "    \n",
     "    if len(gun) > 0:\n",
     "        gun_exist = True\n",
     "        \n",
     "    for (x,y,w,h) in gun:\n",
-    "        frame = cv2.rectangle(frame,(x,y),(x+w,y+h),(255,0,0),2)\n",
-    "        roi_gray = gray[y:y+h, x:x+w]\n",
-    "        roi_color = frame[y:y+h, x:x+w]    \n",
+    "        frame = cv2.rectangle(frame,(x,y),(x+int(w),y+int(h/2)),(255,0,0),2)\n",
+    "#         roi_gray = gray[y:y+h, x:x+w]\n",
+    "#         roi_color = frame[y:y+h, x:x+w]    \n",
     "\n",
     "    # if the first frame is None, initialize it\n",
     "    if firstFrame is None:\n",
@@ -70,7 +71,8 @@
     "\n",
     "    # show the frame and record if the user presses a key\n",
     "    cv2.imshow(\"Security Feed\", frame)\n",
-    "    key = cv2.waitKey(1) & 0xFF\n",
+    "    if (cv2.waitKey(1)== 27):       # press ESC to quit\n",
+    "        break\n",
     "\n",
     "if gun_exist:\n",
     "    print(\"guns detected\")\n",
