--- a/poc/weapon/tutorial/1-gun/test_waepon.ipynb
+++ b/poc/weapon/tutorial/1-gun/test_waepon.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,9 @@
    "source": [
     "gun_cascade = cv2.CascadeClassifier('cascade.xml')\n",
     "# gun_cascade = cv2.CascadeClassifier('cascade-2.xml')\n",
-    "camera = cv2.VideoCapture('data/gun4_2.mp4')\n",
+    "# camera = cv2.VideoCapture('data/gun4_2.mp4')\n",
+    "camera = cv2.VideoCapture('data/test-weapon.mp4')\n",
+    "\n",
     "\n",
     "# initialize the first frame in the video stream\n",
     "firstFrame = None\n",
